# sjtu-cs1952

./: .gitmodules
Verilog-Practice/example/: example_tb.out  example_tb.v  wave.vcd
Verilog-Practice/task1/: task1_tb.out  task1_tb.v  wave.vcd
Verilog-Practice/task2/: task2_tb.out  task2_tb.v  wave.vcd
Verilog-Practice/task3/: task3.v  task3_tb.out  task3_tb.v  test3.out  test3.v  wave.vcd
Verilog-Practice/task4/: task4.out  task4.v  task4_tb.out  task4_tb.v  wave.vcd
Verilog-Practice/task5/: task5.out  task5.v  task5_tb.out  task5_tb.v  wave.vcd
Verilog-Practice/task6/: task6.v  task6_tb.out  task6_tb.v  wave.vcd
contest/0/: 1248.cpp
contest/1/: 1907.cpp  1907.h  high.h
contest/2/: .gitignore  CMakeLists.txt  code  src.hpp  src.hpp.old  src.hpp.ref  test.cpp  train.log.old
contest/3/: .editorconfig
contest/3/1921/: 1.in  1921  1921.cpp  description.md
contest/3/1922/: 1.ans  README.txt  datagen  datagen.cpp  description.md  log.backup.txt  message.txt  spj  spj.cpp  test  test.cpp  test.out
contest/3/1923/: description.md  myanswer.txt  spj  spj.cpp
contest/3/1924/: datagen.py  description.md  haha.py  spj  spj.cpp  test.go  test.py
contest/3/1925/: description.md  message.txt  myanswer.txt  spj  spj.cpp
contest/3/1926/: classes.h  description.md  myanswer.txt  spj  spj.cpp
contest/3/1927/: description.md  spj  spj.cpp
contest/3/1928/: description.md  game.h  manual  manual.cpp  message.txt  myanswer.txt  spj  spj.cpp  term  term.cpp
contest/3/1929/: description.md  spj.cpp  test.c
test/go/: hello.go  test.go
(+21 files in other folders)
